# spartaproject

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  debug_wrapper.py  package.json  pre-commit-config.yaml  pyproject.toml  setup  setup.py  spartaproject.json  tox.ini
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
context/: callable_context.py  config_context.py  decimal_context.py  json_context.py
context/default/: bool_context.py  float_context.py  integer_context.py
context/defaults/: integer_context.py
context/extension/: decimal_context.py
context/file/: config_context.py  json_context.py
contexts/: bool_context.py  config_context.py  decimal_context.py  file_context.py  float_context.py  integer_context.py  json_context.py  path_context.py  string_context.py  time_context.py
develop/: tools.py
doc/: index.html  loader.toml  main.py
docs/: index.html
docs/sheet/: chrome.toml  ssh.toml
docs/wasm/: context.json  main.js
link/: .bash_profile
poetry/linux/: pyproject.toml
poetry/windows/: pyproject.toml
pysparta/: __init__.py  __main__.py
pyspartaproj/: __init__.py  __main__.py  debug.py  pysparta.py
pyspartaproj/context/: callable_context.py
pyspartaproj/extend/: paramiko.py
pyspartaproj/interface/: pytest.py
pyspartaproj/resource/: spartaproject.json.isolate
pyspartaproj/script/: decorator_generator.py  feature_flags.py  format_texts.py  initialize_decimal.py  off_stdout.py  stack_frame.py
script/: call_module.py  debug_empty.py  decorator_generator.py  format_texts.py  off_stdout.py
script/bool/: compare_json.py  compare_value.py  same_value.py
script/bools/: compare_json.py  compare_value.py  same_value.py
script/directories/: create_directory_parent.py  create_directory_working.py
script/directory/: create_directory.py  create_directory_parent.py  create_directory_working.py
script/execute/: call_module.py  debug_empty.py  execute_command.py  script_version.py  virtual_environment.py
script/file/: compress_zip.py  decompress_zip.py  export_config.py  import_config.py
script/files/: compress_zip.py  decompress_zip.py  export_config.py  import_config.py  import_file.py
script/path/: check_exists.py  create_temporary_file.py  create_temporary_tree.py  get_relative.py  iterate_directory.py
script/paths/: check_exists.py  create_temporary_file.py  create_temporary_tree.py  iterate_directory.py
script/server/: connect_server.py  context_server.py  execute_server.py  path_server.py  upload_server.py
script/time/: builtin_timer.py  convert_readable.py  count_elapsed.py  current_datetime.py  from_timestamp.py  get_timestamp.py  set_timestamp.py
script/times/: builtin_timer.py  convert_readable.py  count_elapsed.py  current_datetime.py  get_timestamp.py  set_timestamp.py
scripts/: absolute_path.py  call_module.py  debug_empty.py  deco_generator.py  decorator_generator.py  format_texts.py  off_stdout.py  path_exists.py  same_bools.py  same_elements.py  sandwich_lines.py
scripts/bools/: compare_dict.py  compare_json.py  compare_value.py  same_pair.py  same_value.py
scripts/contexts/: decimal_context.py  string_context.py
scripts/directories/: create_directory.py  create_directory_parent.py  create_directory_working.py  working_space.py
scripts/files/: compress_zip.py  convert_from_json.py  convert_to_json.py  decompress_zip.py  export_config.py  export_file.py  export_json.py  import_config.py  import_file.py  import_json.py
scripts/paths/: absolute_path.py  avoid_duplication.py  check_exists.py  create_directory.py  create_directory_parent.py  create_temporary_file.py  create_temporary_tree.py  create_tmp_tree.py  evacuate_trash.py  get_absolute.py  get_relative.py  iterate_directory.py  parent_directory.py  safe_copy.py  safe_file_history.py  safe_rename.py  working_space.py
scripts/times/: builtin_timer.py  convert_readable.py  count_elapsed.py  current_datetime.py  from_timestamp.py  get_timestamp.py  offset_timezone.py  set_timestamp.py
src/pyspartalib/: __init__.py
src/sync_config/: Dockerfile  docker-compose.yml
sync/: .bash_profile
task/: execute_filter.ps1  execute_filter.sh  integration.ps1
test/: conftest.py
test/context/: test_decimal_context.py
test/script/: test_decorator_generator.py  test_feature_flags.py  test_format_texts.py  test_initialize_decimal.py  test_off_stdout.py  test_stack_frame.py
tests/: __main__.py  setup_pool.py  type_info.py
tests/contexts/: test_config_context.py  test_decimal_context.py  test_file_context.py  test_json_context.py
tests/script/: test_call_module.py  test_off_stdout.py
tests/scripts/: test_absolute_path.py  test_call_module.py  (+7 more)
tools/: .gitignore  execute_filter.ps1  execute_filter.sh
(+743 files in other folders)
