[project]
name = "pyspartaproj"
version = "0.0.1"
requires-python = ">=3.13.1"

[dependency-groups]
lib = ["pyspartalib"]
img = ["pyspartaimg", "pyspartalib"]
dev = ["mypy>=1.13.0", "ruff>=0.8.3"]

[project.optional-dependencies]
lib = ["pyspartalib"]
img = ["pyspartaimg"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
pyspartalib = { workspace = true }
pyspartaimg = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
cache-dir = "./.temp/.ruff_cache"
exclude = ["**/.temp/**", "**/.venv/**", "**/node_modules/**"]
line-length = 79
respect-gitignore = false
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D213"]

[tool.mypy]
cache_dir = "./.temp/.mypy_cache"
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_unimported = true
implicit_optional = true
implicit_reexport = true
mypy_path = "packages/pyspartalib"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = """
  --capture=no
  --exitfirst
  --ignore ./docs
  --last-failed
  --new-first
  --verbose
"""
cache_dir = "./.temp/.pytest_cache"
pythonpath = "packages/pyspartalib"
testpaths = ["packages/pyspartalib/tests"]
