[project]
name = "pyspartaproj"
version = "0.0.1"
requires-python = ">=3.13.1"

[dependency-groups]
pyspartadevc = ["pyspartadevc", "pyspartalib"]
pyspartaimg = ["pyspartaimg", "pyspartalib"]
pyspartalib = ["pyspartalib"]
pyspartawsl = ["pyspartawsl", "pyspartalib"]

dev = ["mypy>=1.13.0", "ruff>=0.8.3", "pytest>=8.3.4"]

[project.optional-dependencies]
pyspartadevc = ["pyspartadevc"]
pyspartaimg = ["pyspartaimg"]
pyspartalib = ["pyspartalib"]
pyspartawsl = ["pyspartawsl"]

[tool.uv]
default-groups = ["pyspartadevc"]

[tool.uv.sources]
pyspartadevc = { workspace = true }
pyspartaimg = { workspace = true }
pyspartalib = { workspace = true }
pyspartawsl = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/pyspartadevc",
  "packages/pyspartaimg",
  "packages/pyspartalib",
  "packages/pyspartawsl",
]

[tool.ruff]
cache-dir = "./.temp/cache/ruff"
exclude = ["**/.temp/**", "**/.venv/**", "**/node_modules/**"]
line-length = 79
respect-gitignore = false
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D213"]
extend-ignore = ["FBT001", "FBT002", "FBT003", "PLR0913", "S602"]

[tool.mypy]
cache_dir = "./.temp/cache/mypy"
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_unimported = true
implicit_optional = true
implicit_reexport = true
mypy_path = "packages/pyspartalib"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = """
  --capture=no
  --exitfirst
  --ignore ./docs
  --last-failed
  --new-first
  --verbose
"""
cache_dir = "./.temp/cache/pytest"
pythonpath = "packages/pyspartalib"
testpaths = ["packages/pyspartalib/tests"]
